{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 22,
  "lineage": "ef8c1408-97a1-5b76-91d2-2a01134d7808",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112850772:loadbalancer/app/simple-lb/e521196115a34b5d",
            "arn_suffix": "app/simple-lb/e521196115a34b5d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "simple-lb-1159828997.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112850772:loadbalancer/app/simple-lb/e521196115a34b5d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "simple-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-005b4021a17e85a7d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00c713ab166298bf9"
              },
              {
                "subnet_id": "subnet-0a47dd37a70b287f7"
              },
              {
                "subnet_id": "subnet-0d801164974d4347d"
              }
            ],
            "subnets": [
              "subnet-00c713ab166298bf9",
              "subnet-0a47dd37a70b287f7",
              "subnet-0d801164974d4347d"
            ],
            "tags": {
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "tags_all": {
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "vpc_id": "vpc-0d468512f500afcf3",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.lb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webapp-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112850772:listener/app/simple-lb/e521196115a34b5d/82d49ef355efe943",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:471112850772:targetgroup/simple-tg/49bdd4438c15b8d4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112850772:listener/app/simple-lb/e521196115a34b5d/82d49ef355efe943",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:471112850772:loadbalancer/app/simple-lb/e521196115a34b5d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "tags_all": {
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test-lb",
            "aws_lb_target_group.lb_target_group",
            "aws_security_group.lb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112850772:targetgroup/simple-tg/49bdd4438c15b8d4",
            "arn_suffix": "targetgroup/simple-tg/49bdd4438c15b8d4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112850772:targetgroup/simple-tg/49bdd4438c15b8d4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "simple-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "tags_all": {
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d468512f500afcf3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112850772:security-group/sg-000900198e4b0cbbb",
            "description": "allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000900198e4b0cbbb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-ec2",
            "name_prefix": "",
            "owner_id": "471112850772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Sahitya_Gupta"
            },
            "tags_all": {
              "Name": "Sahitya_Gupta"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d468512f500afcf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112850772:security-group/sg-005b4021a17e85a7d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005b4021a17e85a7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-lb",
            "name_prefix": "",
            "owner_id": "471112850772",
            "revoke_rules_on_delete": false,
            "tags": {
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "tags_all": {
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d468512f500afcf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112850772:internet-gateway/igw-07ddecb31568c8ffd",
            "id": "igw-07ddecb31568c8ffd",
            "owner_id": "471112850772",
            "tags": {
              "Name": "test_ecs_provisioning",
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning",
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "vpc_id": "vpc-0d468512f500afcf3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07ddecb31568c8ffd",
            "id": "r-rtb-0d21c301fb16d32631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d21c301fb16d3263",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112850772:route-table/rtb-0d21c301fb16d3263",
            "id": "rtb-0d21c301fb16d3263",
            "owner_id": "471112850772",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test_ecs_provisioning-public",
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning-public",
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d468512f500afcf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033a5c636c54e4c3f",
            "route_table_id": "rtb-0d21c301fb16d3263",
            "subnet_id": "subnet-0d801164974d4347d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098b4293ff413a896",
            "route_table_id": "rtb-0d21c301fb16d3263",
            "subnet_id": "subnet-0a47dd37a70b287f7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04777f04b2c61d631",
            "route_table_id": "rtb-0d21c301fb16d3263",
            "subnet_id": "subnet-00c713ab166298bf9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112850772:subnet/subnet-0d801164974d4347d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d801164974d4347d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112850772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test_ecs_provisioning-public-ap-south-1a",
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning-public-ap-south-1a",
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "vpc_id": "vpc-0d468512f500afcf3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112850772:subnet/subnet-0a47dd37a70b287f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a47dd37a70b287f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112850772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test_ecs_provisioning-public-ap-south-1b",
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning-public-ap-south-1b",
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "vpc_id": "vpc-0d468512f500afcf3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112850772:subnet/subnet-00c713ab166298bf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c713ab166298bf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112850772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test_ecs_provisioning-public-ap-south-1c",
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning-public-ap-south-1c",
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "vpc_id": "vpc-0d468512f500afcf3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112850772:vpc/vpc-0d468512f500afcf3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-048615856954970f1",
            "default_route_table_id": "rtb-0b5584ea5f4bdb464",
            "default_security_group_id": "sg-0820467c39607062c",
            "dhcp_options_id": "dopt-0d44ac93545a51572",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d468512f500afcf3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b5584ea5f4bdb464",
            "owner_id": "471112850772",
            "tags": {
              "Name": "test_ecs_provisioning",
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning",
              "createdBy": "Sahitya_Gupta",
              "env": "dev"
            }
          }
        }
      ]
    }
  ]
}